Mention tomcat defaults