@@ -32,6 +32,11 @@ cp /home/timp/spring-instrument-tomcat-3.0.5.RELEASE.jar /opt/apache-tomcat-late
 
 
 /etc/init.d/tomcat6 restart
+(Npote Tomcat will need to have its defaults modified 
+(in /etc/defalts/tomcat6 in ubuntu) to something like:
+JAVA_OPTS="-Djava.awt.headless=true -Xms256M -Xmx768M -XX:MaxPermSize=256m -XX:+
+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled"
+
 
 Deploy to your webserver then run tests. 
 The databse definitions are in src/main/resources/spring/database.properties 
